[gd_scene load_steps=4 format=3 uid="uid://b6mdlg0mk2f7i"]

[ext_resource type="Script" path="res://main.gd" id="1_boi8g"]
[ext_resource type="AudioStream" uid="uid://baswrebl6l2oa" path="res://sounds/sniff-[AudioTrimmer.com].mp3" id="2_c63it"]
[ext_resource type="PackedScene" uid="uid://5uaw70f2daju" path="res://game_over.tscn" id="3_axuwh"]

[node name="Main" type="Node2D"]
script = ExtResource("1_boi8g")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1154.0
offset_bottom = 648.0

[node name="ColorTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="InstructionLabel" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 330.0
offset_top = 205.0
offset_right = 846.0
offset_bottom = 404.0
grow_horizontal = 2
grow_vertical = 2
text = "Press "
horizontal_alignment = 1
vertical_alignment = 1

[node name="sniffsound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_c63it")
volume_db = 9.0

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 314.0
offset_top = 110.0
offset_right = 785.0
offset_bottom = 519.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 300
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="ScoreLabel"]
layout_mode = 0
offset_left = 44.0
offset_top = -32.0
offset_right = 634.0
offset_bottom = 105.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 100
text = "SCORE:"

[node name="GameTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="GameTimerLabel" type="Label" parent="."]
offset_left = 24.0
offset_top = 14.0
offset_right = 200.0
offset_bottom = 129.0

[node name="GameOver" parent="." instance=ExtResource("3_axuwh")]
visible = false

[node name="FartTimer" type="Timer" parent="."]

[connection signal="timeout" from="ColorTimer" to="." method="_on_color_timer_timeout"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
